src/objects/Skill_Assignment__c.object
<CustomObject>
    <description>Used for the automatic assignment of cases in SCE. Developed by Salesforce Professional Services.</description>
    <fields>
        <fullName>Agents__c</fullName>
        <description>Related Agent</description>
        <label>Agents</label>
        <referenceTo>Agents__c</referenceTo>
        <relationshipName>R00NS0000000M2FWMA0</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Represents the priority of the skill. Can be '0', '1', '2', '3'</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Name of the Auto Queue that the Skill is in</description>
        <formula>Skills__r.Auto_queue__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <label>Skill Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <description>Related Skill</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skills</label>
        <referenceTo>Skill__c</referenceTo>
        <relationshipName>R00NS0000000M2FPMA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Skill Assignment</label>
    <nameField>
        <displayFormat>SA{0000000}</displayFormat>
        <label>Skill Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>